# zapisky_vut

./: .gitignore  .gitmodules  Plan zkouskoveho  druhy_semestr.norg  priprava_zkouskove.norg  tnine.c  volitelne_predmety.norg
IEL/: prvni_prednaska.aux  prvni_prednaska.fdb_latexmk  prvni_prednaska.fls  prvni_prednaska.out  prvni_prednaska.tex
IJC/: Makefile  bitset.c  bitset.h  eratosthenes  eratosthenes.c  eratosthenes_factors.txt  error.c  postup.norg  ppm.c  ppm.h  prime  prime-i  prime.c  steg-decode  steg-decode.c
ITY/: proj1.aux  proj1.fls  projekt1.aux  projekt1.fdb_latexmk  projekt1.fls  projekt1.tex
IUS/: .~lock.91_stran-vypis_z_prezentaci.odt#  .~lock.otazky_zhrnute.xlsx#  91_stran-vypis_z_prezentaci.docx  91_stran-vypis_z_prezentaci.odt  ius_22-23_pojmy.txt  ius_otazku  otazky_zhrnute.xlsx
IVS/: .gitmodules  tdd_code.cpp  tdd_code.h
IVS/ivs_test_demo_2025/: CMakeLists.txt  Person.cpp  Person.h  README.md  exception_example.cpp  ivs_example.cpp  ivs_example.h  ivs_example_test.cpp  main  main.cpp  person_main.cpp  person_struct.c
IVS/ivs_test_demo_2025/SeleniumGoogleSuggest/: README.md  pom.xml
IVS/ivs_test_demo_2025/SeleniumGoogleSuggest/src/main/java/cz/vutbr/fit/knot/gja/googleSuggest/: GoogleSuggest.java
IZLO/: file.smt2  file1.smt2  file2.smt2  file3.smt2  file4.smt2  file5.smt2  fileAlmost_there_baby.smt2  fileFinale.smt2  filePretty.smt2  fileWe_are_there.smt2  project2.smt2
IZP/: demo_cviko.c  posledni_hodina.norg
project_1/: projekt1.aux  projekt1.fdb_latexmk  projekt1.fls  projekt1.tex
rozvrh/: schedule.json  schedule1.json  (+2 more)
(+309 files in other folders)
